# lab14

./: .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/artifacts/: person.json
examples/sources/: a.out  pack.cpp  person.json  unpack.cpp
sources/: process.cpp  process — копия.cpp
